# audioscribe

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
app/: env_sample  run.py
app/config/: settings.py
app/handlers/: greeting_handler.py  voice_handler.py
app/monitoring/: main_logging.py
app/utils/: format_converter.py  voice_to_text.py
